--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "docs": "styleguidist server",
     "docs:build": "rimraf docs && styleguidist build && git add docs",
     "prepublish": "rimraf lib && babel src --out-dir lib --copy-files",
+    "generate": "node_modules/.bin/cross-env NODE_ENV=production babel-node --presets=env --plugins=transform-async-to-generator ./generator/app.js",
+    "gen": "node_modules/.bin/cross-env NODE_ENV=production babel-node --presets=env --plugins=transform-async-to-generator ./generator/app.js",
     "lint": "eslint . --cache && echo \"eslint: no lint errors\"",
     "start": "webpack-dev-server --open"
   },
@@ -35,8 +37,17 @@
     "react-dom": "^16.1.0"
   },
   "dependencies": {
+    "chalk": "^2.3.0",
     "classnames": "^2.2.5",
-    "prop-types": "^15.6.0"
+    "cli-clear": "^1.0.4",
+    "figlet": "^1.2.0",
+    "inquirer": "^5.0.1",
+    "jsdom": "^11.6.0",
+    "prop-types": "^15.6.0",
+    "svg2ttf": "^4.1.0",
+    "ttf2eot": "^2.0.0",
+    "ttf2woff": "^2.0.1",
+    "ttf2woff2": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
@@ -44,9 +55,11 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-minify": "^0.2.0",
     "babel-preset-react": "^6.24.1",
+    "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
     "eslint": "^4.10.0",
     "eslint-config-airbnb": "^16.1.0",
