--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-    "presets": ["react", "env"]
+    "presets": ["react", "env"],
+    "plugins": [
+        "transform-object-rest-spread",
+        "transform-class-properties",
+        "transform-async-to-generator"
+    ]
 }
