--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "docs": "styleguidist server",
     "docs:build": "rimraf docs && styleguidist build && git add docs",
+    "examples:build": "rimraf examples/build && cross-env NODE_ENV=production webpack",
     "prepublish": "rimraf lib && babel src --out-dir lib --copy-files",
     "generate": "node_modules/.bin/cross-env NODE_ENV=production babel-node --presets=env --plugins=transform-async-to-generator ./generator/app.js",
     "gen": "node_modules/.bin/cross-env NODE_ENV=production babel-node --presets=env --plugins=transform-async-to-generator ./generator/app.js",
@@ -48,9 +49,12 @@
     "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-minify": "^0.2.0",
     "babel-preset-react": "^6.24.1",
+    "cli-clear": "^1.0.4",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
     "eslint": "^4.10.0",
@@ -59,22 +63,21 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "figlet": "^1.2.0",
     "file-loader": "^1.1.5",
+    "inquirer": "^5.0.1",
+    "jsdom": "^11.6.0",
     "postcss-flexbugs-fixes": "^3.2.0",
     "postcss-loader": "^2.0.8",
     "react-styleguidist": "^6.0.33",
     "rimraf": "^2.6.2",
     "style-loader": "^0.19.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4",
-    "jsdom": "^11.6.0",
-    "cli-clear": "^1.0.4",
-    "figlet": "^1.2.0",
-    "inquirer": "^5.0.1",
     "svg2ttf": "^4.1.0",
     "ttf2eot": "^2.0.0",
     "ttf2woff": "^2.0.1",
-    "ttf2woff2": "^2.0.3"
+    "ttf2woff2": "^2.0.3",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
   }
 }
