--- a/package.json
+++ b/package.json
@@ -50,10 +50,13 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-minify": "^0.2.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "cli-clear": "^1.0.4",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
@@ -69,6 +72,8 @@
     "jsdom": "^11.6.0",
     "postcss-flexbugs-fixes": "^3.2.0",
     "postcss-loader": "^2.0.8",
+    "react": "^16.1.0",
+    "react-dom": "^16.1.0",
     "react-styleguidist": "^6.0.33",
     "rimraf": "^2.6.2",
     "style-loader": "^0.19.0",
