--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "polestar-icons",
   "author": "NKIA",
-  "version": "0.9.46",
+  "version": "0.9.47",
   "description": "Polestar UI Icons",
   "main": "./lib/index.js",
   "keywords": [
@@ -82,5 +82,6 @@
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
-  }
+  },
+  "types": "polestar-icons.d.ts"
 }
