--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "polestar-icons",
   "author": "NKIA",
-  "version": "0.9.47",
+  "version": "0.9.48",
   "description": "Polestar UI Icons",
   "main": "./lib/index.js",
   "keywords": [
@@ -83,5 +83,5 @@
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   },
-  "types": "polestar-icons.d.ts"
+  "types": "./lib/polestar-icons.d.ts"
 }
