--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
         "transform-object-rest-spread",
         "transform-class-properties",
         "transform-async-to-generator",
-        "transform-object-assign"
+        "transform-object-assign",
+        "syntax-dynamic-import"
     ]
 }
