--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "homepage": "https://github.com/nkiateam/polestar-icons#readme",
   "scripts": {
+    "svgo": "svgo ./src/svg/server.svg -o ./src/svg/server.min.svg",
+    "svgr": "rimraf src/svgComponents/* && npx @svgr/cli -d src/svgComponents src/svgs",
     "docs": "styleguidist server",
     "build:docs": "rimraf docs && styleguidist build && git add docs",
     "build:examples": "rimraf examples/build && cross-env NODE_ENV=production webpack",
@@ -23,6 +25,7 @@
     "generate": "node_modules/.bin/cross-env NODE_ENV=production babel-node --presets=env --plugins=transform-async-to-generator ./generator/app.js",
     "gen": "node_modules/.bin/cross-env NODE_ENV=production babel-node --presets=env --plugins=transform-async-to-generator ./generator/app.js",
     "lint": "eslint . --cache && echo \"eslint: no lint errors\"",
+    "http-server": "http-server examples/ -p 4101 -o",
     "start": "webpack-dev-server --open"
   },
   "directories": {
@@ -34,18 +37,21 @@
     "lib"
   ],
   "peerDependencies": {
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0"
   },
   "dependencies": {
-    "chalk": "^2.3.0",
-    "classnames": "^2.2.5",
-    "prop-types": "^15.6.2"
+    "@loadable/component": "^5.10.3",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "chalk": "^2.4.2",
+    "classnames": "^2.2.6",
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.6",
+    "@svgr/cli": "^4.3.3",
+    "autoprefixer": "^7.2.6",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
@@ -56,32 +62,36 @@
     "babel-preset-minify": "^0.2.0",
     "babel-preset-react": "^6.24.1",
     "cli-clear": "^1.0.4",
-    "cross-env": "^5.1.3",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.10.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "figlet": "^1.2.0",
-    "file-loader": "^1.1.5",
-    "inquirer": "^5.0.1",
-    "jsdom": "^11.6.0",
-    "postcss-flexbugs-fixes": "^3.2.0",
-    "postcss-loader": "^2.0.8",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
+    "cross-env": "^5.2.1",
+    "css-loader": "^0.28.11",
+    "eslint": "^6.6.0",
+    "eslint-config-polestar": "^0.1.2",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-flowtype": "^4.4.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.2.0",
+    "figlet": "^1.2.4",
+    "file-loader": "^1.1.11",
+    "http-server": "^0.11.1",
+    "inquirer": "^5.2.0",
+    "jsdom": "^11.12.0",
+    "postcss-flexbugs-fixes": "^3.3.1",
+    "postcss-loader": "^2.1.6",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-styleguidist": "^6.0.33",
-    "rimraf": "^2.6.2",
-    "style-loader": "^0.19.0",
-    "svg2ttf": "^4.1.0",
+    "rimraf": "^2.7.1",
+    "style-loader": "^0.19.1",
+    "svg2ttf": "^4.3.0",
+    "svgo": "^1.3.2",
     "ttf2eot": "^2.0.0",
     "ttf2woff": "^2.0.1",
     "ttf2woff2": "^2.0.3",
     "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "webpack": "^3.12.0",
+    "webpack-dev-server": "^2.11.5"
   },
   "types": "./lib/polestar-icons.d.ts"
 }
