--- a/package.json
+++ b/package.json
@@ -41,31 +41,32 @@
     "react-dom": "^16.11.0"
   },
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@loadable/component": "^5.10.3",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "chalk": "^2.4.2",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-decorators": "^7.7.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-transform-async-to-generator": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
     "@svgr/cli": "^4.3.3",
-    "autoprefixer": "^7.2.6",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-minify": "^0.2.0",
-    "babel-preset-react": "^6.24.1",
+    "autoprefixer": "^9.7.1",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "babel-preset-minify": "^0.5.1",
     "cli-clear": "^1.0.4",
-    "cross-env": "^5.2.1",
-    "css-loader": "^0.28.11",
+    "cross-env": "^6.0.3",
+    "css-loader": "^3.2.0",
     "eslint": "^6.6.0",
     "eslint-config-polestar": "^0.1.2",
+    "eslint-import-resolver-webpack": "^0.11.1",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-flowtype": "^4.4.1",
     "eslint-plugin-import": "^2.18.2",
@@ -73,25 +74,34 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
     "figlet": "^1.2.4",
-    "file-loader": "^1.1.11",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "inquirer": "^5.2.0",
     "jsdom": "^11.12.0",
-    "postcss-flexbugs-fixes": "^3.3.1",
-    "postcss-loader": "^2.1.6",
+    "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-safe-parser": "^4.0.1",
     "react": "^16.11.0",
+    "react-dev-utils": "^9.1.0",
     "react-dom": "^16.11.0",
-    "react-styleguidist": "^6.0.33",
-    "rimraf": "^2.7.1",
-    "style-loader": "^0.19.1",
+    "react-hot-loader": "^4.12.17",
+    "react-styleguidist": "^10.2.0",
+    "rimraf": "^3.0.0",
+    "style-loader": "^1.0.0",
     "svg2ttf": "^4.3.0",
     "svgo": "^1.3.2",
+    "terser-webpack-plugin": "^2.2.1",
     "ttf2eot": "^2.0.0",
     "ttf2woff": "^2.0.1",
     "ttf2woff2": "^2.0.3",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.5"
+    "url-loader": "^2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
   "types": "./lib/polestar-icons.d.ts"
 }
