--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "docs": "styleguidist server",
     "build:docs": "rimraf docs && styleguidist build && git add docs",
     "build:examples": "rimraf examples/build && cross-env NODE_ENV=production webpack",
-    "prepublish": "rimraf lib && babel src --out-dir lib --copy-files",
+    "prepublishOnly": "rimraf lib && babel src --out-dir lib --copy-files",
     "generate": "node_modules/.bin/cross-env NODE_ENV=production babel-node --presets=@babel/env --plugins=@babel/transform-async-to-generator ./generator/app.js",
     "gen": "node_modules/.bin/cross-env NODE_ENV=production babel-node --presets=@babel/env --plugins=@babel/transform-async-to-generator ./generator/app.js",
     "lint": "eslint . --cache && echo \"eslint: no lint errors\"",
