--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,19 @@
 {
     "presets": [
-      "@babel/preset-env",
+      ["@babel/preset-env", {
+        "targets": {
+          "browsers": ["last 2 versions", "ie >= 11"]
+        },
+        "useBuiltIns": "usage",
+        "corejs": 3,
+        "shippedProposals": true
+      }],
       // ["@babel/preset-env", { "targets": { "node": "current" } }],
       "@babel/preset-react"
     ],
     "plugins": [
       ["@babel/plugin-proposal-decorators", { "legacy": true }],
-      ["@babel/plugin-proposal-class-properties", { "loose": true }],
+      ["@babel/plugin-proposal-class-properties"],
       ["@babel/plugin-proposal-object-rest-spread", { "loose": true }],
       "@babel/plugin-transform-async-to-generator",
       "@babel/plugin-syntax-dynamic-import"
