--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "polestar-icons",
   "author": "NKIA",
-  "version": "0.10.4-beta.5",
+  "version": "0.10.5",
   "description": "Polestar UI Icons",
   "main": "./lib/index.js",
   "keywords": [
