--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "polestar-icons",
   "author": "NKIA",
-  "version": "0.10.7",
+  "version": "0.10.8-beta.1",
   "description": "Polestar UI Icons",
   "main": "./lib/index.js",
   "keywords": [
